test/data/semantic-errors/greaterthan=-must-have-integer-operands.jen
notAnInteger := 'eight'
anInteger := 7
aBinaryExpression := notAnInteger >= anInteger
